gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/csharp__eof-in-verbatim-string.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 8,
        end_line: 19,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 10,
        end_line: 19,
    },
]
