gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/csharp__truncated-mid-method.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 3,
        end_line: 12,
    },
]
